<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>
    
    <Button
        android:id="@+id/nuevaSesionButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevaSesion" />

    <Button
        android:id="@+id/historialButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial" />
    
</LinearLayout>